# customer-support-chatbot-backend

./: .gitignore  Procfile  README.md  chat.json  checkpoints.sqlite-shm  checkpoints.sqlite-wal  main.py  pyproject.toml  requirements.txt  server.py  session.txt  sqlite.db  test.ipynb
chains/: chatbot_query_chain.py
models/: chatbot_query.py
resources/: .~lock.chatbot-resource.docx#  chatbot-resource.docx
utils/: training_data_utils.py
