[tool.poetry]
name = "customer-support-chatbot"
version = "0.1.0"
description = ""
authors = ["Muntasir-Mahmud <m.siyam529@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.1"
google-generativeai= "^0.4.1"
langchain= "^0.1.12"
fastapi= "^0.110.0"
langchain-google-genai= "^0.0.11"
python-dotenv="^1.0.1"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
